stylesheet.css
body {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 100px 6fr 25px;
  margin: 0;
  height: 100vh;
  background-color: aliceblue;
}
.nav-bar {
  display: flex;
  justify-content: space-between;

  align-items: center;
  padding-left: 20px;
  padding-right: 20px;
  background-color: rgb(76, 100, 121);
}
.nav-bar h1 {
  width: 300.44px;
}
.nav-bar ul,
li,
a {
  display: flex;
  gap: 25px;
  list-style-type: none;
  text-decoration: none;
  font-weight: 900;

  color: white;
}

/* MAIN CONTENT */

/*form container pop up*/

.form-container {
  position: fixed;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;
  height: 450px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  border-radius: 10px;
}
.hide {
  display: none;
}
fieldset {
  height: 400px;
}

.book-inputs {
  display: flex;
  justify-content: space-between;
}
.main-content {
  grid-column:1/4;
  display: grid;
  grid-template-columns: 2fr 1fr;
  background-color: rgb(211, 216, 219);
  background: url(bg.jpg) no-repeat;
  background-size: cover;
  background-position: top right;
}
.main-title {
  padding-left: 15px;
  font-size: 2rem;
  color: white;
}

/* LEFT */
.book-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
  grid-template-rows: repeat(auto-fit, minmax(300px, 0.5fr));
  justify-content: center;
  gap: 15px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 15px;
  padding-right: 15px;
}
.book-card {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 3fr 1fr;
  align-items: center;
  /* padding-left: 10px; */
  font-weight: 900;
  color: rgb(255, 255, 255);
  background-color: rgba(17, 45, 184, 0.5);
  border: 1px solid rgb(226, 229, 232);
  border-radius: 15px;
  height: 300px;
}
.add-card {
  border: solid 1px white;
  background-color: rgb(255, 255, 255, 0.2);
  border-radius: 10px;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 300px;
  transition: all 0.07s;
}
.active {
  transform: scale(1, 1);
  box-shadow: 0 0 10px #f6f0db;
  border: 1px solid rgb(255, 253, 250);
  background: rgba(255, 254, 254, 0.1);
}
.add-card:hover {
  cursor: pointer;
}
.add {
  font-size: 5rem;
  font-weight: 900;
}
.title-container {
  grid-column: 1/3;
  color: rgb(183, 135, 135);
  font-size: 1.3em;
  background-color: rgba(32, 46, 112, 0.9);
  height: 100%;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
}
.card-info {
  grid-column: 1/3;
  padding-left: 10px;
}
.card-title {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 20px;
}
.card-buttons {
  grid-column: 2/3;
  display: flex;
  justify-content: flex-end;
  padding-right: 10px;
}
.card-buttons img{
  height:30px
}
.object-property-value {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

/* RIGHT */

.main-right {
  grid-column: 2/3;
}

/* FOOTER */
.footer {
  grid-column: 1/4;
  background-color: rgb(74, 37, 6);
  color: rgb(235, 235, 235);
  display: flex;
  justify-content: center;
  align-items: center;
}

@media only screen and (max-width: 560px) {
  .nav-bar {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-right: 70px;
  }
  .nav-bar h1 {
    font-size: 20px;
    padding-left: 40px;
    width: auto;
  }
  .main-content {
    display: flex;
    flex-direction: column;
  }
}

